# reversible-backend-api

./: Readme.md  junk.py  pyproject.toml  requirements.txt
src/config/: env.py
src/db/: supabase.py
src/json/: 0388f3bf-022b-4e2d-8e1d-9e08614db260.json  04bfada2-3400-4870-9dc1-e8d07b7d5b46.json  0c8ef863-175a-4ab7-a472-caf88b77ecea.json  0dcb35a6-4505-495b-83a4-c763d704fd87.json  0ede313c-74c9-4b0a-9f6f-70372b0a197b.json  1b1bf87b-c932-4ba1-8fbf-9747c4f32a6e.json  25a63bb8-b998-4efa-b005-3a097bdc8b1a.json  26847a4d-e47b-454a-88f6-2a0b9f65dc29.json  2ee19aff-6976-47f9-8bba-33b42fa1fcfb.json  3b3d177f-e68a-4775-8172-2b4253f72c66.json  4be56d8a-8319-44f7-a1e4-de7b88cbe070.json  670a6312-3f33-43fe-ae35-a25f66e6fdc8.json  6a16d342-7dcd-46bf-b03e-d6bece72f119.json  7469abcb-5e1a-4bf8-8a5e-f0d4667ed9ea.json  7dc2d2a2-3753-4960-9e13-390be2764e9a.json  8e2c4b35-9fc4-4288-a95d-429384d0c6e4.json  a2879fc0-c903-48dd-a274-23878efddeac.json  a3369447-d32b-4c54-adda-8056ec534b95.json  a9b5edeb-6934-43aa-94d7-3cd625779804.json  abd18159-e548-4ac1-994a-4df38814d471.json  ad2b239a-0819-4f3f-94ea-9d477c161828.json  bcd17377-42db-49af-b7a8-35c0536c316f.json  bf33a833-fbd5-4653-9f09-ddb509540bbc.json  cbcf2aef-79b2-40bf-be6e-a224eb305019.json  f20d0da0-7806-4fb7-ab2a-684f7671c613.json  f753ab54-0386-45eb-85ca-1871a91b5ca2.json  f9f4ee54-57f5-4fe8-a4d0-827319088eaf.json  fdebf2f3-8a47-422c-be7a-1bb9f6bd8c59.json
src/reversible_backend/: main.py
src/routes/: auth.py  disputes.py  judges.py  transactions.py  users.py
src/types/: transaction.py  user.py
src/utils/: cdp_api_key.json  (+3 more)
